[gd_scene load_steps=6 format=3 uid="uid://deahjbvovxuvn"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_ivyfm"]
[ext_resource type="Script" path="res://Scripts/enemy_side_battle.gd" id="2_cdpmu"]
[ext_resource type="PackedScene" uid="uid://dsdq0efwkbsg0" path="res://Models/Characters/enemy.tscn" id="3_spgr2"]
[ext_resource type="Script" path="res://Scripts/player_side_battle.gd" id="4_n0p7c"]
[ext_resource type="PackedScene" uid="uid://dqykicfu0u1ug" path="res://Models/Characters/player.tscn" id="5_puib7"]

[node name="Battle" type="Node2D"]
script = ExtResource("1_ivyfm")

[node name="Players" type="Node2D" parent="."]
script = ExtResource("4_n0p7c")

[node name="Player" parent="Players" instance=ExtResource("5_puib7")]

[node name="Player2" parent="Players" instance=ExtResource("5_puib7")]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource("2_cdpmu")

[node name="Enemy" parent="Enemies" instance=ExtResource("3_spgr2")]
position = Vector2(1017, 58)

[node name="Enemy3" parent="Enemies" instance=ExtResource("3_spgr2")]
position = Vector2(1022, 528)

[node name="Enemy4" parent="Enemies" instance=ExtResource("3_spgr2")]
position = Vector2(1013, 359)

[node name="Enemy2" parent="Enemies" instance=ExtResource("3_spgr2")]
position = Vector2(1010, 200)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Actions" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -332.0
offset_right = 49.0
offset_bottom = -161.0
grow_horizontal = 2
grow_vertical = 0

[node name="Attack" type="Button" parent="CanvasLayer/Actions"]
layout_mode = 2
text = "Attack"

[node name="Skills" type="Button" parent="CanvasLayer/Actions"]
layout_mode = 2
text = "Skills"

[node name="Items" type="Button" parent="CanvasLayer/Actions"]
layout_mode = 2
text = "Items"

[node name="Guard" type="Button" parent="CanvasLayer/Actions"]
layout_mode = 2
text = "Guard"

[node name="Run" type="Button" parent="CanvasLayer/Actions"]
layout_mode = 2
text = "Run"

[connection signal="pressed" from="CanvasLayer/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="CanvasLayer/Actions/Skills" to="." method="_on_skills_pressed"]
[connection signal="pressed" from="CanvasLayer/Actions/Items" to="." method="_on_items_pressed"]
[connection signal="pressed" from="CanvasLayer/Actions/Guard" to="." method="_on_guard_pressed"]
[connection signal="pressed" from="CanvasLayer/Actions/Run" to="." method="_on_run_pressed"]
